--- a/index.html
+++ b/index.html
@@ -3,26 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    /*.attribution { font-size: 11px; text-align: center; }*/
+    /*.attribution a { color: hsl(228, 45%, 44%); }*/
+
+    body {
+      background-color: #d6e2f0;
+      overflow: auto;
+      margin: 0;
+    }
+
+    .flex-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .flex-container div {
+      background-color: cornflowerblue;
+      width: 25%;
+      height: 80%;
+
+    }
+
   </style>
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+  <div class="flex-container">
+    <div>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    </div>
+    
   </div>
+<!--  Improve your front-end skills by building projects-->
+
+<!--  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level-->
+  
+<!--  <div class="attribution">-->
+<!--    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. -->
+<!--    Coded by <a href="#">Mika</a>.-->
+<!--  </div>-->
 </body>
 </html>
