--- a/index.html
+++ b/index.html
@@ -42,17 +42,24 @@
     }
 
     .txt1 {
-      font-weight: bold;
+      font-weight: 700;
       font-size: 3.2vmin;
       text-align: center;
-      padding: 0 5% 0 5%;
+      padding: 0 5%;
     }
 
     .txt2 {
       font-weight: 400;
       font-size: 2.2vmin;
       text-align: center;
-      padding: 0 10% 0 10%;
+      padding: 0 10%;
+    }
+
+    .attribution {
+      width: 100vw;
+      position: absolute;
+      bottom: 20px;
+      text-align: center;
     }
 
   </style>
@@ -65,6 +72,10 @@
       <p class="txt1">Improve your front-end skills by building projects</p>
       <p class="txt2"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
+  </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/mika-marcondes">Mika</a>.
   </div>
 </body>
 
